objects/Customer_Intended_Document__c.object
<CustomObject>
    <fields>
        <fullName>CI_Creator__c</fullName>
        <label>CI Creator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Number_CI_URL__c</fullName>
        <formula>HYPERLINK(CI_URL__c,CI_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CI Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Number__c</fullName>
        <externalId>true</externalId>
        <label>CI Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CI_Status__c</fullName>
        <label>CI Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_URL__c</fullName>
        <label>CI URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Intended Document</label>
    <nameField>
        <displayFormat>CID-{0000000}</displayFormat>
        <label>CIDName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Intended Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>